Telephone Number Validator
Prüfe ob der input string eines der vorgegebenen formate erfüllt:
(555-555-5555
(555)555-5555
(555) 555-5555
555 555 5555
5555555555
optional auch mit 1 vorne, mit oder oder leerzeichen danach

--- a/JavaScript Algorithms and Data Structures/index.html
+++ b/JavaScript Algorithms and Data Structures/index.html
@@ -9,5 +9,6 @@
 <body>
     <script src="Palindrome Checker.js"></script>
     <script src="Roman Numeral Converter.js"></script>
+    <script src="Telephone Number Validator.js"></script>
 </body>
 </html>
