--- a/JavaScript Algorithms and Data Structures/index.html
+++ b/JavaScript Algorithms and Data Structures/index.html
@@ -10,5 +10,6 @@
     <script src="Palindrome Checker.js"></script>
     <script src="Roman Numeral Converter.js"></script>
     <script src="Telephone Number Validator.js"></script>
+    <script src="Caesars Cipher.js"></script>
 </body>
 </html>
