--- a/JavaScript Algorithms and Data Structures/index.html
+++ b/JavaScript Algorithms and Data Structures/index.html
@@ -11,5 +11,7 @@
     <script src="Roman Numeral Converter.js"></script>
     <script src="Telephone Number Validator.js"></script>
     <script src="Caesars Cipher.js"></script>
+    <script src="Cash Register.js"></script>
+
 </body>
 </html>
